--- a/requirements.txt
+++ b/requirements.txt
@@ -8,9 +8,7 @@ itsdangerous>=0.24
 tornado>=6.0.3
 pathtools3>=0.2.1
 requests>=2.20.0
-robotframework>=2.8.5,<4.0             # Still some issues to handle RF 4.x properly
+robotframework>=2.8.5
 robotframework-requests>=0.5.0
 robotframework-seleniumlibrary>=4.0.0
 watchdog>=0.9.0
-wheel
-# wsgiref==0.1.2
