--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ Jinja2>=2.11.3
 MarkupSafe>=0.23
 PyYAML>=5.4
 Werkzeug>=0.15.3
-argh>=0.25.0
+# unused: argh>=0.25.0
 itsdangerous>=0.24
 tornado>=6.0.3
 pathtools3>=0.2.1
